####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = screenshot_diff.png screenshot_merge.png index.html background.png letter_by_letter.png triple_diff.png white_space.png open_dialog.png 

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = kdiff3

